# finance_tracker_api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0f2dfcd9413b_database_schema.py  2da013f3f6ec_schema.py  386c09a9f079_add_reminders_table.py  5c052e8a9e6d_schema.py  6376d0895e27_add_categories_table.py  aa923732d0f6_add_accounts_table.py  ae2adb3fa57a_.py  cc036a01fc43_add_goals_table.py  eadf561f5de5_schema.py
app/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: accounts.py  auth.py  categories.py  goals.py  reminders.py  transactions.py  users.py
tests/: conftest.py  database.py  test_accounts.py  test_auth.py  test_categories.py  test_goals.py  test_reminders.py  test_transactions.py  test_users.py
